--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <nav>
                     <ul>
                         <li class="nav-li-element"><a href="#">Home</a></li>
-                        <li class="nav-li-element"><a href="#">Conocé</a></li>
                         <li class="nav-li-element"><a href="#">Soluciones</a></li>
                         <li class="nav-li-element"><a href="Paginas/nosotros.html">Nosotros</a></li>
+                        <li class="nav-li-element"><a href="#">Preguntas Frequentes</a></li>
                         <li class="nav-li-element"><a href="Paginas/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <main>
+        <main id="main-index">
             <section id="section-statement">
                 <div class="common-padding">
                     <div class="flex-item">
@@ -210,17 +210,6 @@
                                 <div class="flex-item">
                                     <p>
                                         Nuestras páginas estan diseñadas para tener un desempeño óptimo, asegurando páginas que cargan rápido y por lo tanto mejorando la experiencia del usuario.
-                                    </p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="flex-item">
-                                    <img src="" alt="icon">
-                                    <h3>Soporte</h3>
-                                </div>
-                                <div class="flex-item">
-                                    <p>
-                                        Comunicate con nosotros en cualquier momento. Cuando te comunicas con nosotros te comunicas conmigo, el dueño y programador.
                                     </p>
                                 </div>
                             </li>
