--- a/Paginas/nosotros.html
+++ b/Paginas/nosotros.html
@@ -7,14 +7,14 @@
         <meta name="description" content="Diseñamos páginas estáticas para tu negocios">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Páginas Estáticas">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <header>
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="Imagenes/logo-dark-blue.png" alt="logo">
+                        <img src="../Imagenes/logo-dark-blue.png" alt="logo">
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -24,20 +24,43 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="nav-li-element"><a href="#">Home</a></li>
-                        <li class="nav-li-element"><a href="#">Conocé</a></li>
+                        <li class="nav-li-element"><a href="../index.html">Home</a></li>
                         <li class="nav-li-element"><a href="#">Soluciones</a></li>
-                        <li class="nav-li-element"><a href="#">Nosotros</a></li>
-                        <li class="nav-li-element"><a href="#">Contacto</a></li>
+                        <li class="nav-li-element"><a href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-li-element"><a href="#">Preguntas Frequentes</a></li>
+                        <li class="nav-li-element"><a href="contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
         <main>
+            <div class="page-top-div">
+                <h1>Nosotros</h1>
+            </div>
+            <section id="section-nosotros-nosotros" class="fondo-blanco">
+                <div class="common-padding">
+                    <div class="text-container">
+                        <div class="small-title">Páginas Estáticas</div>
+                        <h2>Creamos sitios web con propósito e intención.</h2>
+                        <p>
+                            En Páginas Estáticas, nos dedicamos a ayudar a pequeños y medianos emprendimientos a dar sus primeros pasos en el mundo digital con soluciones web prácticas, modernas y accesibles. Sabemos que muchos negocios tienen sueños grandes, pero presupuestos ajustados, por eso nos especializamos en crear páginas web que no solo sean lindas y funcionales, sino también económicas y fáciles de manejar.
+                        </p>
+                        <p>
+                            Fundada en 2023 por Felipe Ortigoza, un apasionado por la tecnología y el emprendimiento, nuestra empresa nació con la idea de apoyar a los negocios locales a crecer y conectarse con más clientes. Entendemos los desafíos que enfrentan los emprendedores, y por eso ofrecemos un servicio cercano, personalizado y enfocado en resultados reales.
+                        </p>
+                        <p>
+                            En Páginas Estáticas, creemos que una página web no tiene que ser complicada ni cara para ser efectiva. Trabajamos con vos para entender tus necesidades y armar una plataforma que refleje la esencia de tu negocio, te ayude a destacarte en línea y atraiga a más clientes. Ya sea que estés arrancando o buscando renovar tu presencia digital, estamos acá para hacerlo simple, rápido y sin vueltas.
+                        </p>
+                        <p>
+                            Nuestro compromiso es acompañarte en cada paso, ofreciendo un servicio transparente, eficiente y adaptado a tus objetivos. Porque en Páginas Estáticas, no solo armamos páginas web, creamos oportunidades para que tu negocio crezca.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
 
         </footer>
-        <script src="Scripts/hamburgerMenu.js"></script>
+        <script src="../Scripts/hamburgerMenu.js"></script>
     </body>
 </html>
