--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul>
                         <li class="nav-li-element"><a href="#">Home</a></li>
-                        <li class="nav-li-element"><a href="#">Soluciones</a></li>
+                        <li class="nav-li-element"><a href="Paginas/soluciones.html">Soluciones</a></li>
                         <li class="nav-li-element"><a href="Paginas/nosotros.html">Nosotros</a></li>
                         <li class="nav-li-element"><a href="#">Preguntas Frequentes</a></li>
                         <li class="nav-li-element"><a href="Paginas/contacto.html">Contacto</a></li>
