--- a/Paginas/nosotros.html
+++ b/Paginas/nosotros.html
@@ -25,7 +25,7 @@
                 <nav>
                     <ul>
                         <li class="nav-li-element"><a href="../index.html">Home</a></li>
-                        <li class="nav-li-element"><a href="#">Soluciones</a></li>
+                        <li class="nav-li-element"><a href="soluciones.html">Soluciones</a></li>
                         <li class="nav-li-element"><a href="nosotros.html">Nosotros</a></li>
                         <li class="nav-li-element"><a href="#">Preguntas Frequentes</a></li>
                         <li class="nav-li-element"><a href="contacto.html">Contacto</a></li>
