movile design done

--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -14,7 +14,7 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="../Imagenes/logo-dark-blue.png" alt="logo">
+                        <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -92,7 +92,7 @@
         <footer>
             <div class="common-padding">
                 <div id="footer-div-top">
-                    <img id="footer-div-top-logo" src="../Imagenes/logo-white.png" alt="Logo de Páginas Estáticas">
+                    <img id="footer-div-top-logo" src="../Imagenes/Logo/logo-paginas-estaticas-white-2.png" alt="Logo de Páginas Estáticas">
                     <div id="footer-div-top-information" class="footer-section">
                         <h4>Información</h4>
                         <ul>
