desktop design on progress

--- a/Paginas/faq.html
+++ b/Paginas/faq.html
@@ -81,7 +81,12 @@
         <footer>
             <div class="common-padding">
                 <div id="footer-div-top">
-                    <img id="footer-div-top-logo" src="../Imagenes/Logo/logo-paginas-estaticas-white-2.png" alt="Logo de Páginas Estáticas">
+                    <div>
+                        <img id="footer-div-top-logo" src="../Imagenes/Logo/logo-paginas-estaticas-white-2.png" alt="Logo de Páginas Estáticas">
+                        <p>
+                            Creemos que cada proyecto merece un sitio web que marque la diferencia. Nos especializamos en el diseño de páginas estáticos que reflejan la identidad de tu negocio con profesionalismo y claridad, brindándote una presencia online sólida y efectiva.
+                        </p>
+                    </div>
                     <div id="footer-div-top-information" class="footer-section">
                         <h4>Información</h4>
                         <ul>
