--- a/index.html
+++ b/index.html
@@ -56,118 +56,121 @@
                         </div>
                     </div>
                     <div class="flex-item">
-                        <img src="Imagenes/Responsive Images/responsive-design-2.png">
+                        <img src="Imagenes/Responsive Images/responsive-design-3.png">
                     </div>
                 </div>
             </section>
             <section id="section-que-hacemos">
                 <div class="common-padding">
-                    <div class="flex-item">
-                        <div class="text-container">
-                            <span class="small-title">Que hacemos</span>
-                            <h2>Le damos visibilidad a tu emprendimiento</h2>
-                            <p>
-                                En Páginas Estáticas nos enfocamos en el desarrollo de diseño web para emprendimientos emergentes ubicados en Argentina. Cada línea de código está escrita a mano para asegurar obtener cumplir con los parámetros requeridos por Google para que tu sitio obtenga más visitas y tu negocio más clientes. Nuestro objetivo es generar relaciones de largo plazo con nuestros clientes y verlos crecer con el tiempo.
-                            </p>
-                        </div>
+                    <div class="text-container">
+                        <span class="small-title">Que hacemos</span>
+                        <h2>Le damos visibilidad a tu emprendimiento</h2>
+                        <p>
+                            En Páginas Estáticas nos enfocamos en el desarrollo de diseño web para emprendimientos emergentes ubicados en Argentina. Cada línea de código está escrita a mano para asegurar obtener cumplir con los parámetros requeridos por Google para que tu sitio obtenga más visitas y tu negocio más clientes. Nuestro objetivo es generar relaciones de largo plazo con nuestros clientes y verlos crecer con el tiempo.
+                        </p>
                     </div>
-                    <div class="flex-item">
-                        <ul id="que-hacemos-ul">
-                            <li>
-                                <span class="svg-container">
-                                    <svg
+                    <ul id="que-hacemos-ul">
+                        <li>
+                            <span class="svg-container">
+                                <svg
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path d="M13 16H11V18H13V16Z" fill="currentColor" />
+                                    <path
+                                        fill-rule="evenodd"
+                                        clip-rule="evenodd"
+                                        d="M5 4C5 2.89543 5.89543 2 7 2H17C18.1046 2 19 2.89543 19 4V20C19 21.1046 18.1046 22 17 22H7C5.89543 22 5 21.1046 5 20V4ZM7 4H17V20H7L7 4Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </span>
+                            <div class="text-container">
+                                <h3>Primero Móvil</h3>
+                                <p>
+                                    Comenzamos a construir tu página primero para teléfonos celulares, lo que nos permite optimizar el código asegurando la mejor experiencia para los usuarios, lo que se traduce en confianza en tu emprendimiento.
+                                </p>
+                            </div>
+                            <span class="action-link">
+                                <a href="Paginas/soluciones.html">
+                                    Saber más
+                                </a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="svg-container">
+                                <svg
                                     width="24"
                                     height="24"
                                     viewBox="0 0 24 24"
                                     fill="none"
                                     xmlns="http://www.w3.org/2000/svg"
                                     >
-                                        <path d="M13 16H11V18H13V16Z" fill="currentColor" />
-                                        <path
-                                            fill-rule="evenodd"
-                                            clip-rule="evenodd"
-                                            d="M5 4C5 2.89543 5.89543 2 7 2H17C18.1046 2 19 2.89543 19 4V20C19 21.1046 18.1046 22 17 22H7C5.89543 22 5 21.1046 5 20V4ZM7 4H17V20H7L7 4Z"
-                                            fill="currentColor"
-                                        />
-                                    </svg>
-                                </span>
-                                <div class="text-container">
-                                    <h3>Primero Móvil</h3>
-                                    <p>
-                                        Comenzamos a construir tu página primero para teléfonos celulares, lo que nos permite optimizar el código asegurando la mejor experiencia para los usuarios, lo que se traduce en confianza en tu emprendimiento.
-                                    </p>
-                                </div>
-                                <span class="action-link">
-                                    <a href="Paginas/soluciones.html">
-                                        Comenzar
-                                    </a>
-                                </span>
-                            </li>
-                            <li>
-                                <span class="svg-container">
-                                    <svg
-                                        width="24"
-                                        height="24"
-                                        viewBox="0 0 24 24"
-                                        fill="none"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        >
-                                        <path
-                                            fill-rule="evenodd"
-                                            clip-rule="evenodd"
-                                            d="M3 6C3 4.89543 3.89543 4 5 4H19C20.1046 4 21 4.89543 21 6V14C21 15.1046 20.1046 16 19 16H5C3.89543 16 3 15.1046 3 14V6ZM5 6H19V14H5V6Z"
-                                            fill="currentColor"
-                                        />
-                                        <path
-                                            d="M2 18C1.44772 18 1 18.4477 1 19C1 19.5523 1.44772 20 2 20H22C22.5523 20 23 19.5523 23 19C23 18.4477 22.5523 18 22 18H2Z"
-                                            fill="currentColor"
-                                        />
-                                    </svg>
-                                </span>
-                                <div class="text-container">
-                                    <h3>Diseño adaptativo</h3>
-                                    <p>
-                                        Tu página se adapta a cualquier dispositivo, ya sea un teléfono celular, tablet, laptop, o computadora de escritorio. Esto permite que no importa desde que dispotivo se acceda tu página siempre va a dar una excelente impresión.
-                                    </p>
-                                </div>
-                                <span class="action-link">
-                                    <a href="Paginas/soluciones.html">
-                                        Comenzar
-                                    </a>
-                                </span>
-                            </li>
-                            <li>
-                                <span class="svg-container">
-                                    <svg
-                                        width="24"
-                                        height="24"
-                                        viewBox="0 0 24 24"
-                                        fill="none"
-                                        xmlns="http://www.w3.org/2000/svg"
-                                        >
-                                        <path
-                                            d="M13 5.07089C16.3923 5.55612 19 8.47353 19 12C19 15.866 15.866 19 12 19C8.13401 19 5 15.866 5 12C5 9.96159 5.87128 8.12669 7.26175 6.84738L5.84658 5.43221C4.09461 7.0743 3 9.40932 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C11.662 3 11.3283 3.01863 11 3.05493V9.08551H13V5.07089Z"
-                                            fill="currentColor"
-                                        />
-                                        <path
-                                            d="M7.70711 8.70708C7.31658 9.0976 7.31658 9.73077 7.70711 10.1213L10.5355 12.9497C10.9261 13.3402 11.5592 13.3402 11.9497 12.9497C12.3403 12.5592 12.3403 11.926 11.9497 11.5355L9.12132 8.70708C8.7308 8.31655 8.09763 8.31655 7.70711 8.70708Z"
-                                            fill="currentColor"
-                                        />
-                                    </svg>
-                                </span>
-                                <div class="text-container">
-                                    <h3>Tiempos de carga optimizados</h3>
-                                    <p>
-                                        Si tu página tarda más de 3 segundos en cargar podrías perder más del 50% de tu tráfico. Nuestras páginas cargan en 1 segundo o menos, asegurando que cada persona que quiera visitar tu página pueda hacerlo.
-                                    </p>
-                                </div>
-                                <span class="action-link">
-                                    <a href="Paginas/soluciones.html">
-                                        Comenzar
-                                    </a>
-                                </span>
-                            </li>
-                        </ul>
+                                    <path
+                                        fill-rule="evenodd"
+                                        clip-rule="evenodd"
+                                        d="M3 6C3 4.89543 3.89543 4 5 4H19C20.1046 4 21 4.89543 21 6V14C21 15.1046 20.1046 16 19 16H5C3.89543 16 3 15.1046 3 14V6ZM5 6H19V14H5V6Z"
+                                        fill="currentColor"
+                                    />
+                                    <path
+                                        d="M2 18C1.44772 18 1 18.4477 1 19C1 19.5523 1.44772 20 2 20H22C22.5523 20 23 19.5523 23 19C23 18.4477 22.5523 18 22 18H2Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </span>
+                            <div class="text-container">
+                                <h3>Diseño adaptativo</h3>
+                                <p>
+                                    Tu página se adapta a cualquier dispositivo, ya sea un teléfono celular, tablet, laptop, o computadora de escritorio. Esto permite que no importa desde que dispotivo se acceda tu página siempre va a dar una excelente impresión.
+                                </p>
+                            </div>
+                            <span class="action-link">
+                                <a href="Paginas/soluciones.html">
+                                    Saber más
+                                </a>
+                            </span>
+                        </li>
+                        <li>
+                            <span class="svg-container">
+                                <svg
+                                    width="24"
+                                    height="24"
+                                    viewBox="0 0 24 24"
+                                    fill="none"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    >
+                                    <path
+                                        d="M13 5.07089C16.3923 5.55612 19 8.47353 19 12C19 15.866 15.866 19 12 19C8.13401 19 5 15.866 5 12C5 9.96159 5.87128 8.12669 7.26175 6.84738L5.84658 5.43221C4.09461 7.0743 3 9.40932 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C11.662 3 11.3283 3.01863 11 3.05493V9.08551H13V5.07089Z"
+                                        fill="currentColor"
+                                    />
+                                    <path
+                                        d="M7.70711 8.70708C7.31658 9.0976 7.31658 9.73077 7.70711 10.1213L10.5355 12.9497C10.9261 13.3402 11.5592 13.3402 11.9497 12.9497C12.3403 12.5592 12.3403 11.926 11.9497 11.5355L9.12132 8.70708C8.7308 8.31655 8.09763 8.31655 7.70711 8.70708Z"
+                                        fill="currentColor"
+                                    />
+                                </svg>
+                            </span>
+                            <div class="text-container">
+                                <h3>Tiempos de carga optimizados</h3>
+                                <p>
+                                    Si tu página tarda más de 3 segundos en cargar podrías perder más del 50% de tu tráfico. Nuestras páginas cargan en 1 segundo o menos, asegurando que cada persona que quiera visitar tu página pueda hacerlo.
+                                </p>
+                            </div>
+                            <span class="action-link">
+                                <a href="Paginas/soluciones.html">
+                                    Saber más
+                                </a>
+                            </span>
+                        </li>
+                    </ul>
+                    <div>
+                        <button class="call-to-action-dark">
+                            <a href="Paginas/contacto.html">
+                                Solicitá información
+                            </a>
+                        </button>
                     </div>
                 </div>
             </section>
@@ -282,10 +285,12 @@
             <section id="section-portafolio">
                 <div class="common-padding">
                     <div class="text-container">
-                        <span class="small-title">Nuestro trabajo</span>
-                        <h2>Portafolio</h2>
+                        <div>
+                            <span class="small-title">Nuestro trabajo</span>
+                            <h2>Menos complicación, más resultados: webs que funcionan.</h2>
+                        </div>
                         <p>
-                            No importa cual sea tu negocio, construimos una página que es efectiva, moderna, optimizada, y adaptada a tu industria.
+                            No importa cual sea tu negocio, construimos una página que es efectiva, moderna, optimizada, y adaptada a tu industria. Ya sea que estés comenzando o buscando renovar tu presencia online, estamos acá para ayudarte a construir una web que refleje la esencia de tu negocio y te ayude a alcanzar tus objetivos.
                         </p>
                     </div>
                     <div id="div-portfolio-ul">
@@ -350,7 +355,12 @@
         <footer>
             <div class="common-padding">
                 <div id="footer-div-top">
-                    <img id="footer-div-top-logo" src="Imagenes/Logo/logo-paginas-estaticas-white-2.png" alt="Logo de Páginas Estáticas">
+                    <div>
+                        <img id="footer-div-top-logo" src="Imagenes/Logo/logo-paginas-estaticas-white-2.png" alt="Logo de Páginas Estáticas">
+                        <p>
+                            Creemos que cada proyecto merece un sitio web que marque la diferencia. Nos especializamos en el diseño de páginas estáticos que reflejan la identidad de tu negocio con profesionalismo y claridad, brindándote una presencia online sólida y efectiva.
+                        </p>
+                    </div>
                     <div id="footer-div-top-information" class="footer-section">
                         <h4>Información</h4>
                         <ul>
