desktop design done

--- a/Paginas/contacto.html
+++ b/Paginas/contacto.html
@@ -14,7 +14,9 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        <a href="../index.html">
+                            <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        </a>
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -82,7 +84,7 @@
                                 <textarea name="mensaje" placeholder="Escribí tu mensaje..."></textarea>
                             </div>
                             <div id="div-contact-form-boton">
-                                <button type="submit" class="call-to-action">Enviar mensaje</button>
+                                <button type="submit" class="call-to-action-dark">Enviar mensaje</button>
                             </div>
                         </form>    
                     </div> 
