--- a/Paginas/nosotros.html
+++ b/Paginas/nosotros.html
@@ -14,7 +14,9 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        <a href="../index.html">
+                            <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        </a>
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -39,6 +41,7 @@
             </div>
             <section id="section-nosotros-nosotros" class="fondo-blanco">
                 <div class="common-padding">
+                    <img class="curved-borders" src="../Imagenes/coding-2.jpg">
                     <div class="text-container">
                         <div class="small-title">Páginas Estáticas</div>
                         <h2>Creamos sitios web con propósito e intención.</h2>
