--- a/Paginas/soluciones.html
+++ b/Paginas/soluciones.html
@@ -14,7 +14,9 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        <a href="../index.html">
+                            <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        </a>
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -108,7 +110,7 @@
                 <div class="common-padding">
                     <h2>¿Listo para obtener la página que siempre quisiste para tu negocio?</h2>
                     <button class="call-to-action">
-                        <a href="#">
+                        <a href="contacto.html">
                             Contactanos
                         </a>
                     </button>
