--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        <a href="index.html">
+                            <img src="Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        </a>
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
@@ -176,16 +178,15 @@
             </section>
             <section id="section-que-ofrecemos">
                 <div class="common-padding">
-                    <div class="flex-item">
+                    <img class="curved-borders" src="Imagenes/hawaii.jpg" alt="Hawaii landscape">
+                    <div>
                         <div class="text-container">
-                            <span class="small-title">Que ofrecemos</span>
-                            <h2>Páginas Estáticas a partir de $200.000</h2>
-                            <p>
-                                Ofrecemos páginas con un coste inicial de $0 por una página estática estandar. Si tu proyecto tiene requerimientos especiales ofrecemos un costo personalizado basado en el alcance del proyecto, el número de páginas adicionales y el tiempo requerido. Incluye diseño, desarrollo, y lanzamiento.
-                            </p>
+                                <span class="small-title">Que ofrecemos</span>
+                                <h2>Páginas Estáticas a partir de $200.000</h2>
+                                <p>
+                                    Ofrecemos páginas con un coste inicial de $0 por una página estática estandar. Si tu proyecto tiene requerimientos especiales ofrecemos un costo personalizado basado en el alcance del proyecto, el número de páginas adicionales y el tiempo requerido. Incluye diseño, desarrollo, y lanzamiento.
+                                </p>
                         </div>
-                    </div>
-                    <div class="flex-item">
                         <ul id="que-ofrecemos-ul">
                             <li>
                                 <div class="title-container">
