--- a/Paginas/faq.html
+++ b/Paginas/faq.html
@@ -14,7 +14,9 @@
             <div id="header-padding">
                 <div class="header-div-top">
                     <div class="header-div-logo-container">
-                        <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        <a href="../index.html">
+                            <img src="../Imagenes/Logo/logo-paginas-estaticas-color-2.png" alt="logo">
+                        </a>
                     </div>
                     <div id="hamburguer-menu-icon">
                         <span class="bar"></span>
