--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <span class="small-title">Que hacemos</span>
                         <h2>Le damos visibilidad a tu emprendimiento</h2>
                         <p>
-                            En Páginas Estáticas nos enfocamos en el desarrollo de diseño web para emprendimientos emergentes ubicados en Argentina. Cada línea de código está escrita a mano para asegurar obtener cumplir con los parámetros requeridos por Google para que tu sitio obtenga más visitas y tu negocio más clientes. Nuestro objetivo es generar relaciones de largo plazo con nuestros clientes y verlos crecer con el tiempo.
+                            En Páginas Estáticas nos enfocamos en el desarrollo de diseño web para emprendimientos emergentes ubicados en Argentina. Cada línea de código está escrita a mano para asegurarnos de cumplir con los parámetros requeridos por Google para que tu sitio obtenga más visitas y tu negocio más clientes. Nuestro objetivo es crear páginas estáticas que permitan a nuestros clientes hacer crecer sus negocios de manera simple, efectiva y sostenible en el tiempo.
                         </p>
                     </div>
                     <ul id="que-hacemos-ul">
@@ -184,7 +184,7 @@
                                 <span class="small-title">Que ofrecemos</span>
                                 <h2>Páginas Estáticas a partir de $200.000</h2>
                                 <p>
-                                    Ofrecemos páginas con un coste inicial de $0 por una página estática estandar. Si tu proyecto tiene requerimientos especiales ofrecemos un costo personalizado basado en el alcance del proyecto, el número de páginas adicionales y el tiempo requerido. Incluye diseño, desarrollo, y lanzamiento.
+                                    Si tu proyecto tiene requerimientos especiales ofrecemos un costo personalizado basado en el alcance del proyecto, el número de páginas adicionales y el tiempo requerido. Incluye diseño, desarrollo, y lanzamiento.
                                 </p>
                         </div>
                         <ul id="que-ofrecemos-ul">
@@ -214,7 +214,7 @@
                                 </div>
                                 <div class="text-container">
                                     <p>
-                                        Nuestras páginas estáticas no requieren interacciones con bases de datos ni ejecución de código del lado del servidor, lo que reduce las posibles vulnerabilidades y el riesgo de ataques.
+                                        Nuestras páginas estáticas no requieren interacciones con bases de datos ni ejecución de código del lado del servidor, lo que reduce posibles vulnerabilidades y el riesgo de ataques.
                                     </p>
                                 </div>
                             </li>
